--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-sm-0 col-md-0 col-lg-2"></div>
                 <div class="col-sm-12 col-md-12 col-lg-8">
-                    <p class="display-6">
+                    <p class="display-6" style="font-weight: bold">
                         About Me
                     </p>
                     <p class="about">
@@ -713,9 +713,11 @@
                                     <div class="card-body">
                                         <p class="skill-highlights">
                                             The linker files and kernel files were written in <b>C++</b>. <br/>
-                                            Made an entire keymap including <b>Shift and Caps Lock functionality</b>. <br/>
+                                            Made an entire keymap including <b>Shift and Caps Lock functionality</b>.
+                                            <br/>
                                             Had a <b>Mouse graphics</b> too. <br/>
-                                            Converted the entire OS as an ISO file which worked without any errors in Oracle Virtual Box <br/>
+                                            Converted the entire OS as an ISO file which worked without any errors in
+                                            Oracle Virtual Box <br/>
                                         </p>
                                     </div>
                                 </div>
@@ -751,7 +753,8 @@
                                      data-parent="#github-projects">
                                     <div class="card-body">
                                         <p class="skill-highlights">
-                                            A message passing system that uses steganography, i.e. embedding text inside images. <br/>
+                                            A message passing system that uses steganography, i.e. embedding text inside
+                                            images. <br/>
                                             Made a Java software that performs pixel-by-pixel steganography. <br/>
                                             The software was presented with a <b>Java FX frontend</b>. <br/>
                                         </p>
@@ -791,7 +794,8 @@
                                         <p class="skill-highlights">
                                             Parallelization of the International Data Encryption Algorithm. <br/>
                                             Coded in Java (JDK 12). <br/>
-                                            Takes in a message with a random 128 bit key, encrypts the message. Performs key reversal and
+                                            Takes in a message with a random 128 bit key, encrypts the message. Performs
+                                            key reversal and
                                             decryption
                                             of the message. <br/>
                                             Used <b>ExecutorService</b> to parallelize the algorithm with a Thread Pool.
@@ -834,7 +838,8 @@
                                      data-parent="#github-projects">
                                     <div class="card-body">
                                         <p class="skill-highlights">
-                                            It incorporates static web pages in the form of HTML5 and CSS3 and backend support as Java.
+                                            It incorporates static web pages in the form of HTML5 and CSS3 and backend
+                                            support as Java.
                                             <br/>
                                             Dynamic Web Pages were made as <b>JSP</b>. <br/>
                                             The central database was <b>SQLite</b>. <br/>
@@ -874,7 +879,8 @@
                                     <div class="card-body">
                                         <p class="skill-highlights">
                                             Worked on a research paper implementation. <br/>
-                                            Packing items of <i>w weight</i> into <i>n bins</i>, each having a total weight
+                                            Packing items of <i>w weight</i> into <i>n bins</i>, each having a total
+                                            weight
                                             of<i>x</i> <br/>
                                             Optimized to find the least value of <i>n</i>. <br/>
                                             <a href="#">Link to Paper</a>
@@ -902,8 +908,19 @@
     </div>
 </div>
 
+<!-- footer -->
 <div class="text-center" id="footer">
-    
+    <div class="footer-breaker"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-0 col-md-0 col-lg-2"></div>
+            <div class="col-sm-12 col-md-12 col-lg-8 font-weight-bold footer-display">
+                Nikhil Anand &#169; April, 2020
+            </div>
+            <div class="col-sm-0 col-md-0 col-lg-2"></div>
+        </div>
+    </div>
+    <div class="footer-breaker"></div>
 </div>
 
 <!-- Template -->
