--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <!-- Navbar -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-0 col-md-0 col-lg-2"></div>
-        <div class="col-sm-12 col-md-12 col-lg-8 justify-content-center">
+        <div class="col-sm-0 col-md-1 col-lg-2"></div>
+        <div class="col-sm-12 col-md-10 col-lg-8 justify-content-center">
             <nav class="navbar nav justify-content-center">
                 <a class="navbar-brand" href="index.html">Nikhil Anand</a>
             </nav>
@@ -37,6 +37,7 @@
                                    aria-controls="pills-home" aria-selected="true">
                                     <i class="fas fa-house-user"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Home
                                 </a>
                             </li>
@@ -46,6 +47,7 @@
                                    aria-controls="pills-skills" aria-selected="false">
                                     <i class="fas fa-robot"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Skills
                                 </a>
                             </li>
@@ -55,6 +57,7 @@
                                    aria-controls="pills-work" aria-selected="false">
                                     <i class="fas fa-laptop-code"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Work
                                 </a>
                             </li>
@@ -64,6 +67,7 @@
                                    aria-controls="pills-projects" aria-selected="false">
                                     <i class="fab fa-github"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Projects
                                 </a>
                             </li>
@@ -73,6 +77,7 @@
                                    aria-controls="pills-contact" aria-selected="false">
                                     <i class="far fa-id-card"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Contact
                                 </a>
                             </li>
@@ -82,6 +87,7 @@
                                    aria-controls="pills-resume" aria-selected="false">
                                     <i class="fas fa-file-word"></i>
                                     <div class="icon-to-heading"></div>
+                                    <br/>
                                     Resume
                                 </a>
                             </li>
@@ -91,7 +97,7 @@
                 <div class="col-1"></div>
             </div>
         </div>
-        <div class="col-sm-0 col-md-0 col-lg-2"></div>
+        <div class="col-sm-0 col-md-1 col-lg-2"></div>
     </div>
 </div>
 
@@ -104,8 +110,8 @@
         <div class="jumbotron">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-0 col-md-0 col-lg-2"></div>
-                    <div class="col-sm-12 col-md-12 col-lg-8">
+                    <div class="col-sm-0 col-md-1 col-lg-2"></div>
+                    <div class="col-sm-12 col-md-10 col-lg-8">
                         <div class="row">
                             <div class="col-4">
                                 <div class="box">
@@ -119,7 +125,7 @@
                                 <p class="title-body">
                                     I am <b>Nikhil Anand</b> <br/>
                                     <u class="dashed-hello"> I love computers and the science that drives it. </u><br/>
-                                    Welcome to my world, say Hello <br/></p>
+                                    Welcome to my world, say Hello <br/><br/></p>
                                 <blockquote class="blockquote text-left font-italic">
                                     <p class="mb-0">There are 10 types of people in this world, those who understand
                                         binary and those
@@ -129,7 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                    <div class="col-sm-0 col-md-1 col-lg-2"></div>
                 </div>
             </div>
         </div>
@@ -137,8 +143,8 @@
         <!-- About Content -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
-                <div class="col-sm-12 col-md-12 col-lg-8">
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
+                <div class="col-sm-12 col-md-10 col-lg-8">
                     <p class="display-6" style="font-weight: bold">
                         About Me
                     </p>
@@ -152,7 +158,7 @@
                         <br/>
                     </p>
                 </div>
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
             </div>
         </div>
     </div>
@@ -162,8 +168,8 @@
         <!-- Skills -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
-                <div class="col-sm-12 col-md-12 col-lg-8">
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
+                <div class="col-sm-12 col-md-10 col-lg-8">
                     <div class="breaker"></div>
                     <!-- fixme changes -->
                     <div class="row">
@@ -619,7 +625,7 @@
 
                 </div>
 
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
             </div>
         </div>
     </div>
@@ -634,8 +640,8 @@
         <div class="breaker"></div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
-                <div class="col-sm-12 col-md-12 col-lg-8">
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
+                <div class="col-sm-12 col-md-10 col-lg-8">
                     <div class="skill-body" id="projects">
                         <div class="accordion" id="github-projects">
 
@@ -897,7 +903,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-0 col-md-0 col-lg-2"></div>
+                <div class="col-sm-0 col-md-1 col-lg-2"></div>
             </div>
         </div>
     </div>
@@ -913,11 +919,11 @@
     <div class="footer-breaker"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-0 col-md-0 col-lg-2"></div>
-            <div class="col-sm-12 col-md-12 col-lg-8 font-weight-bold footer-display">
+            <div class="col-sm-0 col-md-1 col-lg-2"></div>
+            <div class="col-sm-12 col-md-10 col-lg-8 font-weight-bold footer-display">
                 Nikhil Anand &#169; April, 2020
             </div>
-            <div class="col-sm-0 col-md-0 col-lg-2"></div>
+            <div class="col-sm-0 col-md-1 col-lg-2"></div>
         </div>
     </div>
     <div class="footer-breaker"></div>
@@ -926,9 +932,9 @@
 <!-- Template -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-0 col-md-0 col-lg-2"></div>
-        <div class="col-sm-12 col-md-12 col-lg-8"></div>
-        <div class="col-sm-0 col-md-0 col-lg-2"></div>
+        <div class="col-sm-0 col-md-1 col-lg-2"></div>
+        <div class="col-sm-12 col-md-10 col-lg-8"></div>
+        <div class="col-sm-0 col-md-1 col-lg-2"></div>
     </div>
 </div>
 
